Created async web page with current datetime via JS and WebSockets

--- a/Learning/task_manager/static/task_manager/styles.css
+++ b/Learning/task_manager/static/task_manager/styles.css
@@ -1,5 +1,5 @@
 .task{
-    color: lightgrey;
+    color: blue;
     text-align: center;
-    text-decoration: underline blue;
+    text-decoration: underline black;
 }
