--- a/Learning/task_manager/templates/task_manager/tasks.html
+++ b/Learning/task_manager/templates/task_manager/tasks.html
@@ -5,7 +5,7 @@
 <div style="margin-top: 50px;" class="ui container">
 
     <nav class="logout">
-        <form class="ui form" action="{{ url_for('start') }}" method="post">
+        <form class="ui form" action="{{ url_for('start') }}" method="get">
             <button class="ui teal basic button" type="submit">Выйти</button>
         </form>
     </nav>
