--- a/Learning/task_manager/templates/task_manager/start_page.html
+++ b/Learning/task_manager/templates/task_manager/start_page.html
@@ -3,10 +3,10 @@
 
 <div style="margin-top: 50px;" class="ui container">
      <form action="{{ url_for('login') }}" method="get">
-        <button class="ui teal basic button" type="submit">Авторизоваться</button>
+        <button class="ui black button" type="submit">Авторизоваться</button>
     </form>
   <form action="{{ url_for('register') }}" method="get">
-        <button class="ui teal basic button" type="submit">Зарегистрироваться</button>
+        <button class="ui black button" type="submit">Зарегистрироваться</button>
     </form>
 </div>
 
