--- a/Learning/task_manager/static/css/styles.css
+++ b/Learning/task_manager/static/css/styles.css
@@ -16,3 +16,9 @@ body{
     padding-top: 5px;
     padding-bottom: 5px;
 }
+
+h3{
+    text-align: center;
+    color: red;
+    padding-bottom: 20px;
+}
