--- a/Learning/task_manager/templates/task_manager/register.html
+++ b/Learning/task_manager/templates/task_manager/register.html
@@ -3,31 +3,26 @@
 {% block content %}
 
 <div style="margin-top: 50px;" class="ui container">
-
-    <h1 class="ui center aligned header blue">Регистрация пользователя</h1>
-
-    {% if user_exists == True %}
-     <div style="margin-top: 15px;" class="ui container">
-         <h3>Пользователь с таким адресом электронной почты уже существует! Пожалуйста, введите другой email!</h3>
-     </div>
-    {% endif %}
-
-    <form class="ui form" action="{{ url_for('process_register') }}" method="post">
-      <div class="field">
-        <input type="email" name="email" placeholder="Email"><br>
-      </div>
-      <div class="field">
-        <input type="text" name="username" placeholder="Username"><br>
-      </div>
-      <div class="field">
-        <input type="password" name="password" placeholder="Password"><br>
-      </div>
-        <button class="ui black button" type="submit">Зарегистрироваться</button>
-    </form>
+    <h1 class="ui center aligned header black">Регистрация пользователя</h1>
 </div>
 
-<div style="margin-top: 15px;" class="ui container">
-    <a class="ui yellow button" href="{{ url_for('start') }}">На главную</a>
-</div>
+<form action="{{ url_for('process_register') }}" method="post">
+    <input type="email" name="email" placeholder="Email"><br>
+    <input type="text" name="username" placeholder="Username"><br>
+    <input type="password" name="password" placeholder="Password"><br>
+    <div class="div_notification">
+        {% if empty_creds == True %}
+            <h3>Для авторизации необходимо заполнить все поля! Пожалуйста, попробуйте снова!</h3>
+        {% endif %}
+        {% if user_exists == True %}
+             <h3>Пользователь с таким адресом электронной почты уже существует! Пожалуйста, введите другой email!</h3>
+        {% endif %}
+    </div>
+    <button class="common_button" type="submit">Зарегистрироваться</button>
+</form>
+
+<form action="{{ url_for('start') }}" method="get">
+    <button class="on_start_button" type="submit">На главную</button>
+</form>
 
 {% endblock content %}
