--- a/Learning/task_manager/static/css/styles.css
+++ b/Learning/task_manager/static/css/styles.css
@@ -1,6 +1,30 @@
-.task{
-    color: yellow;
-    text-align: center;
+form {
+    margin-left: 31%;
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+
+label {
+  color: black;
+  font-weight: bold;
+  display: block;
+  padding-left: 21%;
+  font-size: 22px;
+  margin-bottom: 5px;
+}
+
+label:after { content: ": " }
+
+input{
+    height: 40px;
+    width: 700px;
+    color: white;
+    border-radius: 20px;
+    padding-left: 10px;
+    color: black;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
 }
 
 body{
@@ -10,15 +34,261 @@ body{
 }
 
 .task_div{
-    background-color: #fae1a2;
+    background-image: url("../images/bg_task.jpeg");
     margin-top: 15px;
     padding-left: 20px;
     padding-top: 5px;
     padding-bottom: 5px;
+    color: white;
+    width: 1000px;
+    margin-left: 23%;
+    border: 0;
+    border-radius: 30px;
+}
+
+.task_header{
+    width: 750px;
+}
+
+h1{
+    text-align: center;
+    color: black;
+    margin-top: 7.5%;
+    font-size: 45px;
+}
+
+h2{
+    text-align: center;
+    color: white;
+    padding-bottom: 40px;
+    font-size: 35px;
 }
 
 h3{
-    text-align: center;
     color: red;
     padding-bottom: 20px;
+    margin-bottom: -1%;
+    margin-left: -2.5%;
+    margin-top: -0.5%;
+    overflow-wrap: break-word;
+}
+
+.div_notification{
+    margin-left: 6%;
+    width: 600px;
+}
+
+.centered_button{
+    border: 0;
+    border-radius: 20px;
+    cursor: pointer;
+    background-color: black;
+    color: white;
+    min-width: 550px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-left: 0%;
+    display: block;
+    font-size: 50px;
+    font-family: system-ui;
+}
+
+.centered_button:hover {
+  background: #ebd10c;
+  color: black;
+}
+
+.centered_button:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px #cbd6ee;
+}
+
+.start_page_div{
+    margin-top: 100px;
+    margin-bottom: 20px;
+}
+
+.exit_button{
+    border: 0;
+    border-radius: 20px;
+    cursor: pointer;
+    position: absolute;
+    top: 100px;
+    right: 360px;
+    font-size: 20px;
+    font-family: system-ui;
+    background-color: #ebd10c;
+    color: black;
+    border: 0;
+    min-width: 150px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-top: -3%;
+}
+
+.exit_button:hover {
+  background: black;
+  color: white;
+}
+
+.exit_button:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px #cbd6ee;
+}
+
+.on_start_button{
+    border: 0;
+    border-radius: 20px;
+    cursor: pointer;
+    background-color: #ebd10c;
+    color: black;
+    min-width: 250px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-left: 17%;
+    display: block;
+    font-size: 20px;
+    font-family: system-ui;
+}
+
+.on_start_button:hover {
+  background: black;
+  color: white;
+}
+
+.on_start_button:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px #cbd6ee;
+}
+
+.common_button{
+    border: 0;
+    border-radius: 20px;
+    cursor: pointer;
+    background-color: black;
+    color: white;
+    min-width: 250px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin: 17%;
+    display: block;
+    font-size: 20px;
+    font-family: system-ui;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.common_button:hover {
+  background: #ebd10c;
+  color: black;
+}
+
+.common_button:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px #cbd6ee;
+}
+
+.task_description{
+    overflow-wrap: break-word;
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: system-ui;
+    margin-left: 1.5%;
+}
+
+.task_complete{
+    float: right;
+    display: block;
+    margin-right: 3%;
+    background-color: green;
+    width: 140px;
+    height: 30px;
+    font-weight: bold;
+    font-family: system-ui;
+    font-size: 20px;
+    text-align: center;
+    padding-top: 4px;
+    border-radius: 20px;
+}
+
+.task_incomplete{
+    float: right;
+    display: block;
+    margin-right: 2%;
+    background-color: red;
+    width: 160px;
+    height: 30px;
+    font-weight: bold;
+    font-family: system-ui;
+    font-size: 20px;
+    text-align: center;
+    padding-top: 4px;
+    border-radius: 20px;
+}
+
+.container-buttons {
+    position: relative;
+}
+
+.delete_button{
+    border: 0;
+    border-radius: 20px;
+    cursor: not-allowed;
+    background-color: #ebd10c;
+    color: black;
+    min-width: 250px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    display: inline-block;
+    font-size: 20px;
+    font-family: system-ui;
+    text-align: center;
+    margin-left: 1%;
+    margin-bottom: 1%;
+}
+
+.delete_button:hover {
+  background: red;
+  color: white;
+}
+
+.delete_button:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px #cbd6ee;
+}
+
+.update_button{
+    border: 0;
+    border-radius: 20px;
+    cursor: grabbing;
+    background-color: black;
+    color: white;
+    min-width: 250px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    display: inline-block;
+    font-size: 20px;
+    font-family: system-ui;
+    margin-left: 1%;
+    margin-bottom: 1%;
+    text-align: center;
+}
+
+.update_button:hover {
+  background: #4bbd6c;
+  color: black;
+}
+
+.update_button:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px #cbd6ee;
+}
+
+.zero_margin_top{
+    margin-top: 0px;
+}
+
+.thirty_margin_bottom{
+    margin-bottom: 5%;
 }
