--- a/Learning/task_manager/templates/task_manager/start_page.html
+++ b/Learning/task_manager/templates/task_manager/start_page.html
@@ -1,12 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div style="margin-top: 50px;" class="ui container">
+<div class="ui container start_page_div">
      <form action="{{ url_for('login') }}" method="get">
-        <button class="ui black button" type="submit">Авторизоваться</button>
+        <button class="centered_button" type="submit">Авторизоваться</button>
     </form>
+</div>
+
+<div class="ui container">
   <form action="{{ url_for('register') }}" method="get">
-        <button class="ui black button" type="submit">Зарегистрироваться</button>
+        <button class="centered_button" type="submit">Зарегистрироваться</button>
     </form>
 </div>
 
